--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-15 02:49+0000\n"
+"POT-Creation-Date: 2024-11-16 18:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,61 +16,208 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? "
-"1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: SpotifyWrapper/settings.py:166
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "English"
 msgstr "Inglés"
 
-#: SpotifyWrapper/settings.py:167
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "Spanish"
 msgstr "Español"
 
-#: SpotifyWrapper/settings.py:168
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "French"
 msgstr "Francés"
 
-#: users/templates/registered/dashboard2.html:263
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Home"
 msgstr "Hogar"
 
-#: users/templates/registered/dashboard2.html:266
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Games"
+msgstr "Juegos"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Top Track"
+msgstr "Adivina la pista superior"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Top Album"
+msgstr "Adivina el mejor álbum"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Artist"
+msgstr "Adivina el artista"
+
+#: users/templates/users/contact.html users/templates/users/profile2.html
+msgid "LLM Analysis"
+msgstr "Análisis de LLM"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 #, fuzzy
 #| msgid "Your Profile"
 msgid "Profile"
-msgstr "Perfil"
+msgstr "Tu perfil"
 
-#: users/templates/registered/dashboard2.html:267
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Contact"
 msgstr "Contacto"
 
-#: users/templates/registered/dashboard2.html:268
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Logout"
 msgstr "Cerrar sesión"
 
-#: users/templates/users/profile.html:169
-msgid "Your Profile"
-msgstr "Tu Perfil"
+#: users/templates/users/contact.html
+#, fuzzy
+#| msgid "Contact"
+msgid "Contact Us"
+msgstr "Contacto"
 
-#: users/templates/users/profile2.html:166
+#: users/templates/users/contact.html
+msgid "Have a question or feedback? We'd love to hear from you."
+msgstr "¿Tiene alguna pregunta o comentario? Nos encantaría saberlo."
+
+#: users/templates/users/contact.html
+msgid "Name"
+msgstr "Nombre"
+
+#: users/templates/users/contact.html
+msgid "Select a subject"
+msgstr "Seleccione un tema"
+
+#: users/templates/users/contact.html
+msgid "General Inquiry"
+msgstr "Consulta general"
+
+#: users/templates/users/contact.html
+msgid "Technical Support"
+msgstr "Apoyo técnico"
+
+#: users/templates/users/contact.html
+msgid "Feedback"
+msgstr "Comentario"
+
+#: users/templates/users/contact.html
+msgid "Report a Bug"
+msgstr "Reportar un error"
+
+#: users/templates/users/contact.html
+msgid "Feature Request"
+msgstr "Solicitud de función"
+
+#: users/templates/users/contact.html
+msgid "Message"
+msgstr "Mensaje"
+
+#: users/templates/users/contact.html
+#, fuzzy
+#| msgid "Message"
+msgid "Send Message"
+msgstr "Mensaje"
+
+#: users/templates/users/contact.html
+msgid "Additional Ways to Reach Us"
+msgstr "Otras formas de comunicarse con nosotros"
+
+#: users/templates/users/contact.html
+msgid "Email:"
+msgstr "Correo electrónico:"
+
+#: users/templates/users/contact.html
+msgid "Response Time:"
+msgstr "Tiempo de respuesta:"
+
+#: users/templates/users/contact.html
+msgid "We typically respond within 24-48 hours"
+msgstr "Normalmente respondemos en un plazo de 24 a 48 horas."
+
+#: users/templates/users/contact.html
+msgid "Hours:"
+msgstr "Horas:"
+
+#: users/templates/users/contact.html
+msgid "Monday - Friday:"
+msgstr "Lunes - Viernes:"
+
+#: users/templates/users/games.html
+#, fuzzy
+#| msgid "Select a subject"
+msgid "Selected Game:"
+msgstr "Seleccione un tema"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played track?"
+msgstr "¿Puedes adivinar cuál es tu canción número 1 más reproducida?"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played album?"
+msgstr "¿Puedes adivinar cuál es tu álbum más reproducido?"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played artist?"
+msgstr "¿Puedes adivinar cuál es tu artista más escuchado #1?"
+
+#: users/templates/users/games.html
+msgid "Enter your guess"
+msgstr "Introduce tu conjetura"
+
+#: users/templates/users/games.html
+msgid "Make a Guess"
+msgstr "Haz una suposición"
+
+#: users/templates/users/profile.html users/templates/users/profile2.html
+msgid "Your Profile"
+msgstr "Tu perfil"
+
+#: users/templates/users/profile2.html
 msgid "Username:"
 msgstr "Nombre de usuario:"
 
+#: users/templates/users/profile2.html
 msgid "App Settings"
 msgstr "Configuración de la aplicación"
 
+#: users/templates/users/profile2.html
 msgid "Language:"
 msgstr "Idioma:"
 
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "App Settings"
+msgid "Update Settings"
+msgstr "Configuración de la aplicación"
+
+#: users/templates/users/profile2.html
 msgid "Account Management"
 msgstr "Gestión de cuentas"
 
+#: users/templates/users/profile2.html
 msgid "Delete Account"
 msgstr "Eliminar cuenta"
 
-msgid "Toggle Theme:"
-msgstr "Alternar tema:"
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Light Mode"
+msgstr "Cambiar tema:"
 
-msgid "Update Settings"
-msgstr "Actualizar configuración"
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Dark Mode"
+msgstr "Cambiar tema:"
+
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Color Mode"
+msgstr "Cambiar tema:"
