--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-15 02:49+0000\n"
+"POT-Creation-Date: 2024-11-16 18:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,40 +18,208 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: SpotifyWrapper/settings.py:166
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "English"
 msgstr "Anglais"
 
-#: SpotifyWrapper/settings.py:167
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "Spanish"
 msgstr "Espagnol"
 
-#: SpotifyWrapper/settings.py:168
+#: SpotifyWrapper/settings.py users/templates/users/profile2.html
 msgid "French"
 msgstr "Français"
 
-#: users/templates/registered/dashboard2.html:263
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Home"
 msgstr "Maison"
 
-#: users/templates/registered/dashboard2.html:266
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Games"
+msgstr "Jeux"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Top Track"
+msgstr "Devinez la meilleure piste"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Top Album"
+msgstr "Devinez le meilleur album"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
+msgid "Guess Artist"
+msgstr "Devinez l&#39;artiste"
+
+#: users/templates/users/contact.html users/templates/users/profile2.html
+msgid "LLM Analysis"
+msgstr "Analyse LLM"
+
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 #, fuzzy
 #| msgid "Your Profile"
 msgid "Profile"
-msgstr "Profil"
+msgstr "Votre profil"
 
-#: users/templates/registered/dashboard2.html:267
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Contact"
 msgstr "Contact"
 
-#: users/templates/registered/dashboard2.html:268
+#: users/templates/users/contact.html users/templates/users/games.html
+#: users/templates/users/profile2.html
 msgid "Logout"
 msgstr "Déconnexion"
 
-#: users/templates/users/profile.html:169
-msgid "Your Profile"
-msgstr "Votre Profil"
+#: users/templates/users/contact.html
+#, fuzzy
+#| msgid "Contact"
+msgid "Contact Us"
+msgstr "Contact"
 
-#: users/templates/users/profile2.html:166
-msgid "Username"
+#: users/templates/users/contact.html
+msgid "Have a question or feedback? We'd love to hear from you."
 msgstr ""
+"Vous avez une question ou un commentaire ? Nous serons ravis de vous "
+"répondre."
+
+#: users/templates/users/contact.html
+msgid "Name"
+msgstr "Nom"
+
+#: users/templates/users/contact.html
+msgid "Select a subject"
+msgstr "Sélectionnez un sujet"
+
+#: users/templates/users/contact.html
+msgid "General Inquiry"
+msgstr "Demande d&#39;information générale"
+
+#: users/templates/users/contact.html
+msgid "Technical Support"
+msgstr "Assistance technique"
+
+#: users/templates/users/contact.html
+msgid "Feedback"
+msgstr "Retour"
+
+#: users/templates/users/contact.html
+msgid "Report a Bug"
+msgstr "Signaler un bug"
+
+#: users/templates/users/contact.html
+msgid "Feature Request"
+msgstr "Demande de fonctionnalité"
+
+#: users/templates/users/contact.html
+msgid "Message"
+msgstr "Message"
+
+#: users/templates/users/contact.html
+#, fuzzy
+#| msgid "Message"
+msgid "Send Message"
+msgstr "Message"
+
+#: users/templates/users/contact.html
+msgid "Additional Ways to Reach Us"
+msgstr "Autres moyens de nous joindre"
+
+#: users/templates/users/contact.html
+msgid "Email:"
+msgstr "E-mail:"
+
+#: users/templates/users/contact.html
+msgid "Response Time:"
+msgstr "Temps de réponse :"
+
+#: users/templates/users/contact.html
+msgid "We typically respond within 24-48 hours"
+msgstr "Nous répondons généralement dans les 24 à 48 heures"
+
+#: users/templates/users/contact.html
+msgid "Hours:"
+msgstr "Heures:"
+
+#: users/templates/users/contact.html
+msgid "Monday - Friday:"
+msgstr "Lundi - Vendredi:"
+
+#: users/templates/users/games.html
+#, fuzzy
+#| msgid "Select a subject"
+msgid "Selected Game:"
+msgstr "Sélectionnez un sujet"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played track?"
+msgstr "Pouvez-vous deviner quel est votre morceau le plus joué ?"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played album?"
+msgstr "Pouvez-vous deviner quel est votre album le plus écouté ?"
+
+#: users/templates/users/games.html
+msgid "Can you guess your #1 most played artist?"
+msgstr "Pouvez-vous deviner quel est votre artiste le plus joué ?"
+
+#: users/templates/users/games.html
+msgid "Enter your guess"
+msgstr "Entrez votre estimation"
+
+#: users/templates/users/games.html
+msgid "Make a Guess"
+msgstr "Faites une supposition"
+
+#: users/templates/users/profile.html users/templates/users/profile2.html
+msgid "Your Profile"
+msgstr "Votre profil"
+
+#: users/templates/users/profile2.html
+msgid "Username:"
+msgstr "Nom d&#39;utilisateur:"
+
+#: users/templates/users/profile2.html
+msgid "App Settings"
+msgstr "Paramètres de l&#39;application"
+
+#: users/templates/users/profile2.html
+msgid "Language:"
+msgstr "Langue:"
+
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "App Settings"
+msgid "Update Settings"
+msgstr "Paramètres de l&#39;application"
+
+#: users/templates/users/profile2.html
+msgid "Account Management"
+msgstr "Gestion de compte"
+
+#: users/templates/users/profile2.html
+msgid "Delete Account"
+msgstr "Supprimer le compte"
+
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Light Mode"
+msgstr "Thème bascule :"
+
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Dark Mode"
+msgstr "Thème bascule :"
+
+#: users/templates/users/profile2.html
+#, fuzzy
+#| msgid "Toggle Theme:"
+msgid "Toggle Theme: Color Mode"
+msgstr "Thème bascule :"
